# FireRisk

./: .dockerignore  .env.postgres  .env.timescale  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.mqtt  README.md  ca.crt  docker-compose.yml  main.py  nginx.logs  pyproject.toml  run.sh  setup_docker.sh  setup_terminal_env.sh  start.sh
.github/workflows/: app.yml
Kubernetes/: New Text Document.txt  ingress.yaml  namespace.yaml  run_all.sh  zcommands_used.txt
Kubernetes/frcm-api/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml  zcommands_used.txt
Kubernetes/frontend/: configmap.yaml  deployment.yaml  service.yaml  zcommands_used.txt
Kubernetes/keycloak/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml  zcommands_used.txt
Kubernetes/postgres/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml  zcommands_used.txt
Kubernetes/timescaledb/: configmap-init.yaml  configmap.yaml  secret.yaml  service.yaml  statefulset.yaml  zcommands_used.txt
frontend/src/: App.js
frontend_keycloak/: package-lock.json  package.json
frontend_keycloak/src/: App.css  App.js  index.js  keycloak-config.js
frontend_keycloak/src/api/: apiFetch.js
frontend_keycloak/src/components/: ApiTester.js  AuthPanel.js  FrcmRangeForm.js  Navbar.js  TokenPanel.js
frontend_keycloak/src/pages/: ForecastPage.js  HomePage.js
frontend_keycloak/src/utils/: decodeJwt.js
init-postgres/: 01-setup.sql
init-timescaledb/: 01-setup.sql
nginx/: default.conf  frcm-api.conf  keycloak.conf
nginx/conf.d/: 00-acme.conf  api.conf  auth.conf  frontend.conf  frontend.conf.disabled  keycloak.conf  localhost.conf  root.conf
src/firerisk/: __init__.py
src/firerisk/api/: __init__.py  main.py
src/firerisk/api/config/: keycloak_config.py
src/firerisk/api/routers/: admin.py  auth.py  frcm.py  frcm_route.py  user.py  users.py
src/firerisk/api_keycloak/: __init__.py  main.py
src/firerisk/services/: database_services.py  frcm_services.py
src/mqtt/: frcm_publisher.py
src/mqtt/connector/: config-ada502-pub.yml  configuration.py  publisher.py
tests/: test_calculator.py
tests/test_src/test_firerisk/: test_main.py
(+20 files in other folders)
