[project]
name = "firerisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yosafe Fesaha Oqbamecail", email = "581515@stud.hvl.no" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
firerisk = "firerisk:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
