[project]
name = "firerisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yosafe Fesaha Oqbamecail", email = "581515@stud.hvl.no" }
]
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
firerisk = "firerisk:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
